--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,18 +1,14 @@
 .page {
   font-family: var(--font-lato);
-  justify-items: center;
   min-height: 100svh;
   padding: 80px;
-  background: rgb(222, 174, 238);
-  background: radial-gradient(circle, rgba(222, 174, 238, 1) 0%, rgba(148, 185, 233, 1) 100%);
-}
-
-.atropos {
-  width: 200px;
-  height: 300px;
-  background-color: #48cafe;
-}
-
-.atroposContainer {
-  padding: 1rem;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background: url(https://images.unsplash.com/photo-1698507961128-0959d8289d39?q=80&w=2130&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+    no-repeat center center/cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
