--- a/src/components/InputText/style.module.css
+++ b/src/components/InputText/style.module.css
@@ -2,7 +2,7 @@
   display: flex;
   position: relative;
   border: 0;
-  border-bottom: 2px solid #000;
+  border-bottom: 2px solid #fff;
 }
 
 .inputText {
@@ -13,7 +13,12 @@
   padding: 7px 1px;
   background: transparent;
   font-weight: 700;
-  color: #4a4443;
+  color: #f1f1f1;
+}
+
+.inputText::placeholder {
+  color: #f1f1f1;
+  font-weight: 900;
 }
 
 .inputIcon {
