--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,3 +66,19 @@ h6 {
 #__next {
   isolation: isolate;
 }
+
+h1,
+h2 {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 5px;
+  letter-spacing: 0.05em;
+}
+
+p {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-font-smoothing: antialiased !important;
+  text-rendering: optimizelegibility !important;
+  letter-spacing: 0.03em;
+}
