--- a/src/components/WeatherCard/style.module.css
+++ b/src/components/WeatherCard/style.module.css
@@ -1,12 +1,16 @@
 .weatherCard {
-  margin: 3rem;
-  width: 40%;
+  margin: 1.5rem auto;
+  width: 100%;
   border: 2px solid #fafafa10;
   border-radius: 5px;
-  margin: 0 auto;
   background: #fafafa10;
   backdrop-filter: blur(0.9rem);
   padding: 1.5rem;
+  text-wrap: pretty;
+
+  @media screen and (min-width: 768px) {
+    width: 50%;
+  }
 }
 
 .currentTime {
@@ -31,6 +35,7 @@
   gap: 1.5rem;
   justify-content: space-between;
   padding: 1.5rem 0;
+  font-weight: bold;
 }
 
 .extraInfoTitle {
