Weather call now uses env variables

--- a/src/components/ErrorMessage/style.module.css
+++ b/src/components/ErrorMessage/style.module.css
@@ -1,7 +1,7 @@
 .messageContainer {
   margin: 4rem;
   padding: 5px;
-  background: #fafafa10;
+  background: #0007;
   backdrop-filter: blur(0.9rem);
 }
 
