--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,5 +9,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
 }
